objects/ChatterGroupManagement__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is listing of restricted and auto-follow Chatter Groups, consumed by triggers on User and FeedItem.</description>
    <fields>
        <fullName>AutoSubscribe__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-subscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterGroupName__c</fullName>
        <label>Chatter Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicGroupName__c</fullName>
        <label>Public Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <label>Chatter Group Management</label>
</CustomObject>